--- a/Funkcija Graf.ipynb
+++ b/Funkcija Graf.ipynb
@@ -2,13 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in 1:10:\n",
-    "        for "
+    "def grid(M,N):\n",
+    "    ux = []\n",
+    "    uy = []\n",
+    "    vx = []\n",
+    "    vy = []\n",
+    "    for i in range(M):\n",
+    "            for j in range(N):\n",
+    "                ux.append([])\n",
+    "                uy.append([])\n",
+    "                vx.append([])\n",
+    "                vy.append([])\n",
+    "                ux[i].append(3*j)\n",
+    "                if j % 2 == 0:\n",
+    "                    uy[i].append(2*i)\n",
+    "                else:\n",
+    "                    uy[i].append(2*i + 1)\n",
+    "                vx[i].append(ux[i][j] + 2)\n",
+    "                vx[i].append(ux[i][j])\n",
+    "    return ux, uy, vx, vy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ux' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-4d81a9244f55>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mux\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ux' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ux[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
