--- a/Funkcija Graf.ipynb
+++ b/Funkcija Graf.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To je funkcija, ki nam naredi grid"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -19,19 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "u = set()\n",
     "v = set()\n",
-    "a1 = ()\n",
+    "a1 = vector([0,2])\n",
+    "a2 = vector([3,1])\n",
+    "uv = vector([2,0])\n",
     "grid(10,10,u,v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +148,7 @@
        " (27, 19)}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +267,7 @@
        " (29, 19)}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
