--- a/Funkcija Graf.ipynb
+++ b/Funkcija Graf.ipynb
@@ -211,7 +211,7 @@
     }
    ],
    "source": [
-    "(2, 2) in sosedi((3,3))"
+    "(2, 2) in sosedi((3,3)) #ne stekam, zakaj to ne dela"
    ]
   },
   {
