--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +78,20 @@
     "        vektor = self.a * A1 + self.b * A2\n",
     "        koordinate = vektor.koordinate()\n",
     "        return [koordinate[0], koordinate[1]]\n",
+    "    \n",
+    "    def pod(self, premica): \n",
+    "        x, y = self.koordinate()\n",
+    "        if premica.koef != \"NaN\":\n",
+    "            if y <= premica.koef * x + premica.n:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "        # sicer pa pod pomeni levo od navpicnice\n",
+    "        else:\n",
+    "            if x <= premica.x:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
     "\n",
     "class V:\n",
     "    def __init__(self, a, b):\n",
@@ -95,6 +109,22 @@
     "        vektor = self.a * A1 + self.b * A2 + Vektor(1, 0)\n",
     "        koordinate = vektor.koordinate()\n",
     "        return [koordinate[0], koordinate[1]]\n",
+    "    \n",
+    "    def pod(self, premica): \n",
+    "        x, y = self.koordinate()\n",
+    "        if premica.koef != \"NaN\":\n",
+    "            if y <= premica.koef * x + premica.n:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "        # sicer pa pod pomeni levo od navpicnice\n",
+    "        else:\n",
+    "            if x <= premica.x:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "            \n",
+    "        \n",
     "\n",
     "A1 = Vektor(0, - sqrt(3))\n",
     "A2 = Vektor(3 / 2, - sqrt(3) / 2)\n",
@@ -116,88 +146,69 @@
     "        matrika += [vrstica]\n",
     "        \n",
     "    return matrika\n",
-    "\n",
-    "############################### v delu ####################\n",
-    "def premice(k, l, m, n):\n",
-    "    u0 = U(0, 0)\n",
-    "    u1 = U(k, l)\n",
-    "    u2 = U(m, n)\n",
-    "    u3 = U(k + m, l + n)\n",
-    "    \n",
-    "    # e1, e2 sta zgornje premice, f1 in f2 pa spodnje\n",
-    "    if u1.koordinate()[1] >= u2.koordinate()[1]: \n",
-    "        e1 = Premica(u0, u1)\n",
-    "        e2 = Premica(u1, u3)\n",
-    "        f1 = Premica(u0, u2)\n",
-    "        f2 = Premica(u2, u3)\n",
-    "    else:\n",
-    "        e1 = Premica(u0, u2)\n",
-    "        e1 = Premica(u2, u3)\n",
-    "        f1 = Premica(u0, u1)\n",
-    "        f2 = Premica(u1, u3)\n",
-    "\n",
-    "    return {\"premica0\" : e1, \"premica1\" : f1, \"premica2\" : e2, \"premica3\" : f2}\n",
-    "        \n",
-    "def pogoji(tocka, premica0, premica1, premica2, premica3): \n",
-    "    # premica0, premica1 sta zgornji v paralelogramu\n",
-    "    # premica2 je iz izhodisca v drugo smer kot premica 0\n",
-    "    x, y = tocka.koordinate()\n",
-    "    \n",
-    "    if (premica0.koef == \"NaN\"):\n",
-    "        # potem je tudi premica3 navpicna\n",
-    "        pogoj0 = (min(premica0.x, premica3.x) <= x < max(premica0.x, premica3.x))\n",
-    "        # premica1 je zgornja\n",
-    "        pogoj1 = (y <= premica1.koef * x + premica1.n)\n",
-    "        pogoj2 = (y > premica2.koef * x + premica2.n)\n",
-    "        return(pogoj0 & pogoj1 & pogoj2)\n",
-    "    elif (premica1.koef == \"NaN\"):\n",
-    "        # potem je tudi premica2 navpicna\n",
-    "        pogoj1 = (min(premica1.x, premica2.x) <= x < max(premica1.x, premica2.x))\n",
-    "        # premica0 je zgornja\n",
-    "        pogoj0 = (y <= premica0.koef * x + premica0.n)\n",
-    "        pogoj3 = (y > premica2.koef * x + premica2.n)\n",
-    "        return(pogoj0 & pogoj1 & pogoj2)\n",
-    "    else:\n",
-    "        return \"NAAAAAAAAAAA\"\n",
-    "    \n",
-    "from matplotlib.path import Path\n",
-    "\n",
-    "def tocke_v_paralelogramu(k, l, m, n):\n",
-    "    G = grid(k, l, m, n)\n",
-    "    oglisca = [U(0,0).koordinate(), U(k, l).koordinate(), U(m, n).koordinate(), U(k + m, l + n).koordinate()]\n",
-    "    tocke = []\n",
-    "    for i in range(len(G)):\n",
-    "        for j in range(len(G[0])):\n",
-    "            tocke.append(G[i][j].koordinate())\n",
-    "    \n",
-    "    paralelogram = Path(oglisca)\n",
-    "    notranjost = paralelogram.contains_points(tocke)\n",
-    "\n",
-    "    print(notranjost)\n",
-    "    \n",
-    "            \n",
-    "        \n",
-    "        "
+    "## način, da bi dobila desno in zgornjo stranico v paralelgramu???????? ########       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "U(1a, 1b)"
+       "U(-1a, 2b)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "U(1,1)"
+    "Uji = [U(-1,2), U(0,0), U(1,1), U(0,3)]\n",
+    "max(Uji, key = lambda y: y.koordinate()[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Premica(U(0,0),U(-1,0))\n",
+    "U(-1,1).pod(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "U(0a, 0b)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[max(Uji, key = lambda y: y.koordinate()[1])]"
    ]
   }
  ],
