tocke v paralelgramu brez stranic

--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,16 +79,16 @@
     "        koordinate = vektor.koordinate()\n",
     "        return [koordinate[0], koordinate[1]]\n",
     "    \n",
-    "    def pod(self, premica): \n",
+    "    def na(self, premica): \n",
     "        x, y = self.koordinate()\n",
     "        if premica.koef != \"NaN\":\n",
-    "            if y <= premica.koef * x + premica.n:\n",
+    "            if y == premica.koef * x + premica.n:\n",
     "                return True\n",
     "            else:\n",
     "                return False\n",
-    "        # sicer pa pod pomeni levo od navpicnice\n",
+    "        # navpicnica:\n",
     "        else:\n",
-    "            if x <= premica.x:\n",
+    "            if x == premica.x:\n",
     "                return True\n",
     "            else:\n",
     "                return False\n",
@@ -110,16 +110,16 @@
     "        koordinate = vektor.koordinate()\n",
     "        return [koordinate[0], koordinate[1]]\n",
     "    \n",
-    "    def pod(self, premica): \n",
+    "    def na(self, premica): \n",
     "        x, y = self.koordinate()\n",
     "        if premica.koef != \"NaN\":\n",
-    "            if y <= premica.koef * x + premica.n:\n",
+    "            if y == premica.koef * x + premica.n:\n",
     "                return True\n",
     "            else:\n",
     "                return False\n",
-    "        # sicer pa pod pomeni levo od navpicnice\n",
+    "        # navpicnica:\n",
     "        else:\n",
-    "            if x <= premica.x:\n",
+    "            if x == premica.x:\n",
     "                return True\n",
     "            else:\n",
     "                return False\n",
@@ -132,6 +132,7 @@
     "def grid(k, l, m, n):\n",
     "    # oglisca = ([0, 0], [k, l], [m, n], [k + m, l + n])\n",
     "    # print U(0,0).koordinate(), U(k, l).koordinate(), U(m, n).koordinate(), U(k + m, l + n).koordinate()\n",
+    "    # lahko bi dali vsa vozlisca kar v mnozico??\n",
     "    mina = min(0, k, m, k + m)\n",
     "    maxa = max(0, k, m, k + m)\n",
     "    minb = min(0, l, n, l + n)\n",
@@ -146,69 +147,54 @@
     "        matrika += [vrstica]\n",
     "        \n",
     "    return matrika\n",
-    "## način, da bi dobila desno in zgornjo stranico v paralelgramu???????? ########       "
+    "\n",
+    "from matplotlib.path import Path\n",
+    "# mogoce to celo dela?? # trenutno vrne vse tocke v paralelogramu. odstraniiti je potrebno se tiste na obeh premicah\n",
+    "# premisliti je treba se tiste pogoje, ce je use uredu... to, da lezi na premici pa to\n",
+    "# (sem zdej naredu, lih prej k sm su u lj, pa nism preverju)\n",
+    "def paralelogram(k, l, m, n):\n",
+    "    G = grid(k, l, m, n)\n",
+    "    oglisca = [U(0,0).koordinate(), U(k, l).koordinate(), U(k + m, l + n).koordinate(), U(m, n).koordinate()]\n",
+    "    p = Path(oglisca[::-1])\n",
+    "    premica1 = Premica(U(0, 0), U(k, l))\n",
+    "    premica2 = Premica(U(0, 0), U(m, n))\n",
+    "    Uji = set()\n",
+    "    Vji = set()\n",
+    "    for i in range(len(G)):\n",
+    "        for j in range(len(G[0])):\n",
+    "            izbrana = G[i][j]\n",
+    "            tockaU = [izbrana.koordinate()]\n",
+    "            a = izbrana.a\n",
+    "            b = izbrana.b\n",
+    "            izbranaV = V(a, b)\n",
+    "            tockaV = [izbranaV.koordinate()]\n",
+    "            vsebuje_u = p.contains_points(tockaU, radius = 1e-3)[0] # ker vrne array[True]\n",
+    "            vsebuje_v = p.contains_points(tockaV, radius = 1e-3)[0]\n",
+    "            if vsebuje_u and not izbrana.na(premica1) and not izbrana.na(premica2): \n",
+    "                Uji.add(G[i][j])\n",
+    "            elif vsebuje_v and not izbranaV.na(premica1) and not izbranaV.na(premica2):\n",
+    "                Vji.add(izbranaV)\n",
+    "    return Uji, Vji"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "U(-1a, 2b)"
+       "({U(-1a, 2b)}, {V(0a, 0b)})"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Uji = [U(-1,2), U(0,0), U(1,1), U(0,3)]\n",
-    "max(Uji, key = lambda y: y.koordinate()[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p = Premica(U(0,0),U(-1,0))\n",
-    "U(-1,1).pod(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "U(0a, 0b)"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[max(Uji, key = lambda y: y.koordinate()[1])]"
+    "paralelogram(-1, 1, 0, 1)"
    ]
   }
  ],
@@ -217,6 +203,18 @@
    "display_name": "SageMath 8.7",
    "language": "",
    "name": "sagemath"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
