--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,10 @@
     "        koordinate = vektor.koordinate()\n",
     "        return [koordinate[0], koordinate[1]]\n",
     "    \n",
+    "    def sosedi(self):\n",
+    "        s = set({V(self.a, self.b), V(self.a, self.b - 1), V(self.a + 1, self.b - 1)})\n",
+    "        return s\n",
+    "    \n",
     "    def na(self, premica): \n",
     "        x, y = self.koordinate()\n",
     "        if premica.koef != \"NaN\":\n",
@@ -110,6 +114,10 @@
     "        koordinate = vektor.koordinate()\n",
     "        return [koordinate[0], koordinate[1]]\n",
     "    \n",
+    "    def sosedi(self):\n",
+    "        s = set({U(self.a, self.b), U(self.a - 1, self.b + 1), U(self.a, self.b + 1)})\n",
+    "        return s\n",
+    "        \n",
     "    def na(self, premica): \n",
     "        x, y = self.koordinate()\n",
     "        if premica.koef != \"NaN\":\n",
@@ -138,15 +146,23 @@
     "    minb = min(0, l, n, l + n)\n",
     "    maxb = max(0, l, n, l + n)\n",
     "    \n",
-    "    matrika = []\n",
+    "    #matrika = []\n",
+    "    #for i in range(mina, maxa + 1):\n",
+    "    #    vrstica = []\n",
+    "    #    for j in range(minb, maxb + 1):\n",
+    "    #        vrstica += [U(i, j)]\n",
+    "    #        # print U(i,j), U(i, j).koordinate()\n",
+    "    #    matrika += [vrstica]\n",
+    "    #    \n",
+    "    #return matrika\n",
+    "    \n",
+    "    mnozica = set()\n",
     "    for i in range(mina, maxa + 1):\n",
-    "        vrstica = []\n",
     "        for j in range(minb, maxb + 1):\n",
-    "            vrstica += [U(i, j)]\n",
-    "            # print U(i,j), U(i, j).koordinate()\n",
-    "        matrika += [vrstica]\n",
-    "        \n",
-    "    return matrika\n",
+    "            mnozica.add(U(i, j))\n",
+    "    \n",
+    "    return mnozica\n",
+    "    \n",
     "\n",
     "from matplotlib.path import Path\n",
     "# mogoce to celo dela?? # trenutno vrne vse tocke v paralelogramu. odstraniiti je potrebno se tiste na obeh premicah\n",
@@ -154,47 +170,73 @@
     "# (sem zdej naredu, lih prej k sm su u lj, pa nism preverju)\n",
     "def paralelogram(k, l, m, n):\n",
     "    G = grid(k, l, m, n)\n",
-    "    oglisca = [U(0,0).koordinate(), U(k, l).koordinate(), U(k + m, l + n).koordinate(), U(m, n).koordinate()]\n",
+    "    oglisca = [U(0,0).koordinate(), U(k, l).koordinate(), \n",
+    "               U(k + m, l + n).koordinate(), U(m, n).koordinate()]\n",
     "    p = Path(oglisca[::-1])\n",
     "    premica1 = Premica(U(0, 0), U(k, l))\n",
     "    premica2 = Premica(U(0, 0), U(m, n))\n",
     "    Uji = set()\n",
     "    Vji = set()\n",
-    "    for i in range(len(G)):\n",
-    "        for j in range(len(G[0])):\n",
-    "            izbrana = G[i][j]\n",
-    "            tockaU = [izbrana.koordinate()]\n",
-    "            a = izbrana.a\n",
-    "            b = izbrana.b\n",
-    "            izbranaV = V(a, b)\n",
-    "            tockaV = [izbranaV.koordinate()]\n",
-    "            vsebuje_u = p.contains_points(tockaU, radius = 1e-3)[0] # ker vrne array[True]\n",
-    "            vsebuje_v = p.contains_points(tockaV, radius = 1e-3)[0]\n",
-    "            if vsebuje_u and not izbrana.na(premica1) and not izbrana.na(premica2): \n",
-    "                Uji.add(G[i][j])\n",
-    "            elif vsebuje_v and not izbranaV.na(premica1) and not izbranaV.na(premica2):\n",
-    "                Vji.add(izbranaV)\n",
+    "    for u in G:\n",
+    "        izbranaU = u\n",
+    "        a = izbranaU.a\n",
+    "        b = izbranaU.b\n",
+    "            \n",
+    "        izbranaV = V(a, b)\n",
+    "        tockaU = [izbranaU.koordinate()]\n",
+    "        tockaV = [izbranaV.koordinate()]\n",
+    "        # pogoji\n",
+    "        vsebuje_u = p.contains_points(tockaU, radius = 1e-2)[0] # ker vrne array[True]\n",
+    "        vsebuje_v = p.contains_points(tockaV, radius = 1e-2)[0]\n",
+    "        if (vsebuje_u) and (not izbranaU.na(premica1)) and (not izbranaU.na(premica2)): \n",
+    "            Uji.add(izbranaU)\n",
+    "        elif (vsebuje_v) and (not izbranaV.na(premica1)) and (not izbranaV.na(premica2)):\n",
+    "            Vji.add(izbranaV)\n",
+    "            \n",
     "    return Uji, Vji"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({U(-1a, 2b)}, {V(0a, 0b)})"
+       "({U(-1a, 2b), U(-2a, 2b), U(-1a, 1b), U(-2a, 1b)},\n",
+       " {V(0a, 0b), V(-1a, 0b), V(0a, 1b)})"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "paralelogram(-1, 1, 0, 1)"
+    "paralelogram(-2,0,0,2) # ne vsebuje tocke V(-1,1)\n",
+    "#s.contains_points([V(-1,1).koordinate()], radius = 1e-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{V(1a, -1b), V(0a, 0b), V(0a, -1b)}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V(-1,1).koordinate()\n",
+    "U(0,0).sosedi()"
    ]
   }
  ],
