--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,9 @@
     "        a,b = self.podatki()\n",
     "        return ('{}({}a, {}b)'.format(self.__class__.__name__, a, b))\n",
     "    \n",
+    "   # def __eq__(self, other):\n",
+    "   #     return self.a == other.a and self.b == other.b\n",
+    "    \n",
     "    def podatki(self):\n",
     "        return self.a, self.b\n",
     "    \n",
@@ -82,6 +85,9 @@
     "    def sosedi(self):\n",
     "        s = set({V(self.a, self.b), V(self.a, self.b - 1), V(self.a + 1, self.b - 1)})\n",
     "        return s\n",
+    "    \n",
+    "    def premakni(self, x, y):\n",
+    "        return U(self.a + x, self.b + y)\n",
     "    \n",
     "    def na(self, premica): \n",
     "        x, y = self.koordinate()\n",
@@ -96,6 +102,12 @@
     "                return True\n",
     "            else:\n",
     "                return False\n",
+    "            \n",
+    "    def vsebovana(tocka, M):\n",
+    "        for m in M:\n",
+    "            if m.a == tocka.a and m.b == tocka.b:\n",
+    "                return True\n",
+    "        return False\n",
     "\n",
     "class V:\n",
     "    def __init__(self, a, b):\n",
@@ -105,6 +117,9 @@
     "    def __repr__(self):\n",
     "        a,b = self.podatki()\n",
     "        return ('{}({}a, {}b)'.format(self.__class__.__name__, a, b))\n",
+    "    \n",
+    "   # def __eq__(self, other):\n",
+    "   #     return self.a == other.a and self.b == other.b\n",
     "    \n",
     "    def podatki(self):\n",
     "        return self.a, self.b\n",
@@ -117,6 +132,9 @@
     "    def sosedi(self):\n",
     "        s = set({U(self.a, self.b), U(self.a - 1, self.b + 1), U(self.a, self.b + 1)})\n",
     "        return s\n",
+    "        \n",
+    "    def premakni(self, x, y):\n",
+    "        return V(self.a + x, self.b + y)\n",
     "        \n",
     "    def na(self, premica): \n",
     "        x, y = self.koordinate()\n",
@@ -132,6 +150,11 @@
     "            else:\n",
     "                return False\n",
     "            \n",
+    "    def vsebovana(tocka, M):\n",
+    "        for m in M:\n",
+    "            if m.a == tocka.a and m.b == tocka.b:\n",
+    "                return True\n",
+    "        return False       \n",
     "        \n",
     "\n",
     "A1 = Vektor(0, - sqrt(3))\n",
@@ -193,22 +216,71 @@
     "        elif (vsebuje_v) and (not izbranaV.na(premica1)) and (not izbranaV.na(premica2)):\n",
     "            Vji.add(izbranaV)\n",
     "            \n",
-    "    return Uji, Vji"
+    "    return Uji, Vji\n",
+    "\n",
+    "def povezave_na_torusu(k, l, m, n):\n",
+    "    Uij, Vij = paralelogram(k, l, m, n)\n",
+    "    povezave = []\n",
+    "    P = union(Uij, Vij)\n",
+    "    for tocka in P:\n",
+    "        for s in tocka.sosedi():\n",
+    "            if vsebovana(s, P):\n",
+    "                povezave.append((str(tocka), str(s)))\n",
+    "            elif vsebovana(s.premakni(k, l), P):\n",
+    "                s1 = s.premakni(k, l)\n",
+    "                povezave.append((str(tocka), str(s1)))\n",
+    "            elif vsebovana(s.premakni(m, n), P):\n",
+    "                s1 = s.premakni(m, n)\n",
+    "                povezave.append((str(tocka), str(s1)))\n",
+    "            elif s.a == s.b == 0:\n",
+    "                s1 = s.premakni(k + m, l + n)\n",
+    "                povezave.append((str(tocka), str(s1)))\n",
+    "    return povezave\n",
+    "\n",
+    "def graf(k,l,m,n):\n",
+    "    Uij, Vij = paralelogram(k,l,m,n)\n",
+    "    T = set()\n",
+    "    for tocka in union(Uij, Vij):\n",
+    "        T.add(str(tocka))\n",
+    "    Graph([T, lambda u, v: vsebovana(eval(u), sos_v_par(eval(v), k, l, m, n))])    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vsebovana' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-e11a534c135b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mP\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparalelogram\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mvsebovana\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'vsebovana' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "s = V(0,0)\n",
+    "P = paralelogram(-1,1,0,1)\n",
+    "vsebovana(s, P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({U(-1a, 2b), U(-2a, 2b), U(-1a, 1b), U(-2a, 1b)},\n",
-       " {V(0a, 0b), V(-1a, 0b), V(0a, 1b)})"
+       "({U(-2a, 1b), U(-2a, 2b), U(-1a, 2b), U(-1a, 1b)},\n",
+       " {V(0a, 0b), V(0a, 1b), V(-1a, 0b)})"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,8 +314,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.7",
-   "language": "",
+   "display_name": "SageMath 8.9",
+   "language": "sage",
    "name": "sagemath"
   },
   "language_info": {
