--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -335,9 +335,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.7",
-   "language": "",
+   "display_name": "SageMath 8.9",
+   "language": "sage",
    "name": "sagemath"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
