--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,10 +343,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 0, 5, 2)\n",
+      "(1, 0, 7, 2)\n",
+      "(2, 0, 4, 1)\n",
+      "(3, 0, 7, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (k, l, m, n) izomorfen (k', 0, m', n')?\n",
+    "H = nanotorus(1, 2, 3, 4)\n",
+    "for k in range(1, 8):\n",
+    "    for m in range(1, 8):\n",
+    "        for n in range(1, 8):\n",
+    "            G = nanotorus(k, 0, m, n)\n",
+    "            if(H.is_isomorphic(G)):\n",
+    "                print (k,0,m,n)"
+   ]
   }
  ],
  "metadata": {
