--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,31 +228,12 @@
     "    else:\n",
     "        G = Graph(p, multiedges = True)\n",
     "        G._pos = {v: v.koordinate() for v in G}\n",
-    "        return G\n",
-    "\n",
-    "#def pvs(G):\n",
-    "#    s = []\n",
-    "#    s.append(G.vertices()[0])\n",
-    "#    d = {}\n",
-    "#    oce = {}\n",
-    "#    for v in G.vertices():\n",
-    "#        d[v] = \"Inf\"\n",
-    "#        oce[v] = \"None\"\n",
-    "#    d[G.vertices()[0]] = 0\n",
-    "#    while len(s) > 0:\n",
-    "#        w = s[0]\n",
-    "#        del(s[0])\n",
-    "#        for j in w.sosedi(): #ne dela, ker ti sosedje niso isto kot sosedi na grafu\n",
-    "#            if d[j] == \"Inf\":\n",
-    "#                d[j] = d[w] + 1\n",
-    "#                oce[j] = w\n",
-    "#                s.append(j)\n",
-    "#    return d, oce"
+    "        return G\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +310,7 @@
        "Graphics object consisting of 101 graphics primitives"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +341,7 @@
        "Graphics object consisting of 1201 graphics primitives"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +372,7 @@
        "Graphics object consisting of 3276 graphics primitives"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +403,7 @@
        "Graphics object consisting of 101 graphics primitives"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,25 +680,25 @@
     }
    ],
    "source": [
-    "G = nanotorus(2,0,-5,10)\n",
+    "# G = nanotorus(2,0,-5,10)\n",
     "\n",
-    "def izomorfna(F, G):\n",
-    "    try:\n",
-    "        return F.is_isomorphic(G)\n",
-    "    except AttributeError:\n",
-    "        return False\n",
+    "# def izomorfna(F, G):\n",
+    "#     try:\n",
+    "#         return F.is_isomorphic(G)\n",
+    "#     except AttributeError:\n",
+    "#         return False\n",
     "\n",
-    "for k in range(-10, 10):\n",
-    "    for l in range(-10, 10):\n",
-    "        for m in range(-10, 10):\n",
-    "            for n in range(-10, 10):\n",
-    "                if izomorfna(nanotorus(k,l,m,n),G):\n",
-    "                    print('{},{},{},{}'.format(k,l,m,n))\n"
+    "# for k in range(-10, 10):\n",
+    "#     for l in range(-10, 10):\n",
+    "#         for m in range(-10, 10):\n",
+    "#             for n in range(-10, 10):\n",
+    "#                 if izomorfna(nanotorus(k,l,m,n),G):\n",
+    "#                     print('{},{},{},{}'.format(k,l,m,n))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +707,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,22 +745,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nanotorus(10,-10,0,2).is_isomorphic(G)"
+    "nanotorus(10,-10,0,2).is_isomorphic(nanotorus(2,0,-5,10))"
    ]
   },
   {
@@ -954,6 +935,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nanotorus(2,0,0,10).is_isomorphic(nanotorus(2,0,-5,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -962,8 +963,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.7",
-   "language": "",
+   "display_name": "SageMath 8.9",
+   "language": "sage",
    "name": "sagemath"
   },
   "language_info": {
