--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -827,10 +827,10 @@
     {
      "data": {
       "text/plain": [
-       "{V(2a, 9b), V(2a, 0b), V(1a, 9b), U(0a, 0b)}"
+       "{V(2a, 0b), U(0a, 0b), V(1a, 9b), V(2a, 9b)}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,6 +841,64 @@
     "for i in range(r):\n",
     "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))\n",
     "vozlisca_na_razdalji_d(J, U(0,0), set(), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "10 tock na razdalji 2\n",
+      "18 tock na razdalji 3\n",
+      "26 tock na razdalji 4\n",
+      "33 tock na razdalji 5\n",
+      "39 tock na razdalji 6\n",
+      "45 tock na razdalji 7\n",
+      "51 tock na razdalji 8\n",
+      "57 tock na razdalji 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(3,0,0,10)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "10 tock na razdalji 2\n",
+      "19 tock na razdalji 3\n",
+      "30 tock na razdalji 4\n",
+      "41 tock na razdalji 5\n",
+      "51 tock na razdalji 6\n",
+      "60 tock na razdalji 7\n",
+      "68 tock na razdalji 8\n",
+      "76 tock na razdalji 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(4,0,0,10)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
    ]
   },
   {
@@ -951,6 +1009,279 @@
    ],
    "source": [
     "nanotorus(2,0,0,10).is_isomorphic(nanotorus(2,0,-5,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(1,0,0,1)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(0,1,1,0)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(-1,0,0,-1)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(0,1,1,0)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "3 tock na razdalji 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(2,0,0,1)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "3 tock na razdalji 1\n",
+      "5 tock na razdalji 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(3,0,0,1)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "3 tock na razdalji 1\n",
+      "5 tock na razdalji 2\n",
+      "7 tock na razdalji 3\n",
+      "9 tock na razdalji 4\n",
+      "11 tock na razdalji 5\n",
+      "13 tock na razdalji 6\n",
+      "15 tock na razdalji 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(8,0,0,1)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "7 tock na razdalji 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(2,0,0,2)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "9 tock na razdalji 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(3,0,0,2)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "9 tock na razdalji 2\n",
+      "14 tock na razdalji 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(4,0,0,2)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "9 tock na razdalji 2\n",
+      "14 tock na razdalji 3\n",
+      "18 tock na razdalji 4\n",
+      "22 tock na razdalji 5\n",
+      "26 tock na razdalji 6\n",
+      "30 tock na razdalji 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(8,0,0,2)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "10 tock na razdalji 2\n",
+      "18 tock na razdalji 3\n",
+      "26 tock na razdalji 4\n",
+      "33 tock na razdalji 5\n",
+      "39 tock na razdalji 6\n",
+      "45 tock na razdalji 7\n",
+      "51 tock na razdalji 8\n",
+      "57 tock na razdalji 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "J = nanotorus(10,0,0,3)\n",
+    "r = J.diameter()\n",
+    "for i in range(r):\n",
+    "    print(\"{} tock na razdalji {}\".format(len(vozlisca_na_razdalji_d(J, U(0,0), set(), i)), i))"
    ]
   },
   {
