--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1371,17 +1371,17 @@
      "output_type": "stream",
      "text": [
       "Radij je 10, (k, l, m, n) = (10,0,0,2)\n",
-      "razdalja : 10, stevilo sosedov : 40 \n",
-      "razdalja : 9, stevilo sosedov : 38 \n",
-      "razdalja : 8, stevilo sosedov : 34 \n",
-      "razdalja : 7, stevilo sosedov : 30 \n",
-      "razdalja : 6, stevilo sosedov : 26 \n",
-      "razdalja : 5, stevilo sosedov : 22 \n",
-      "razdalja : 4, stevilo sosedov : 18 \n",
-      "razdalja : 3, stevilo sosedov : 14 \n",
-      "razdalja : 2, stevilo sosedov : 9 \n",
-      "razdalja : 1, stevilo sosedov : 4 \n",
-      "razdalja : 0, stevilo sosedov : 1 \n"
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "9 tock na razdalji 2\n",
+      "14 tock na razdalji 3\n",
+      "18 tock na razdalji 4\n",
+      "22 tock na razdalji 5\n",
+      "26 tock na razdalji 6\n",
+      "30 tock na razdalji 7\n",
+      "34 tock na razdalji 8\n",
+      "38 tock na razdalji 9\n",
+      "40 tock na razdalji 10\n"
      ]
     }
    ],
@@ -1393,17 +1393,47 @@
     "print(\"Radij je {}, (k, l, m, n) = ({},{},{},{})\".format(radij, k, l, m, n))\n",
     "for d in range(radij + 1):\n",
     "    #print(\"korak :\", d)\n",
-    "    bliznje = vozlisca_na_razdalji_d(H, U(0,0), set(), radij - d)\n",
+    "    bliznje = vozlisca_na_razdalji_d(H, U(0,0), set(), d)\n",
     "    #print(bliznje)\n",
-    "    print(\"razdalja : {}, stevilo sosedov : {} \".format(radij - d, len(bliznje)))"
+    "    print(\"{} tock na razdalji {}\".format(len(bliznje), d))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Radij je 10, (k, l, m, n) = (0,5,10,0)\n",
+      "1 tock na razdalji 0\n",
+      "4 tock na razdalji 1\n",
+      "10 tock na razdalji 2\n",
+      "19 tock na razdalji 3\n",
+      "31 tock na razdalji 4\n",
+      "45 tock na razdalji 5\n",
+      "59 tock na razdalji 6\n",
+      "72 tock na razdalji 7\n",
+      "84 tock na razdalji 8\n",
+      "95 tock na razdalji 9\n",
+      "100 tock na razdalji 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "k, l, m, n = 0, 5, 10, 0\n",
+    "\n",
+    "H = nanotorus(k, l, m, n)\n",
+    "radij = H.diameter()\n",
+    "print(\"Radij je {}, (k, l, m, n) = ({},{},{},{})\".format(radij, k, l, m, n))\n",
+    "for d in range(radij + 1):\n",
+    "    #print(\"korak :\", d)\n",
+    "    bliznje = vozlisca_na_razdalji_d(H, U(0,0), set(), d)\n",
+    "    #print(bliznje)\n",
+    "    print(\"{} tock na razdalji {}\".format(len(bliznje), d))"
+   ]
   }
  ],
  "metadata": {
